[gd_scene load_steps=12 format=3 uid="uid://cpurqr4hrd62g"]

[ext_resource type="Script" path="res://Plataformas/title_screen.gd" id="1_4f27t"]
[ext_resource type="Texture2D" uid="uid://coyx20spobepx" path="res://Assets/Menu/LogoHoradevantura.png" id="1_g48yt"]
[ext_resource type="Texture2D" uid="uid://bamhev8rp0s4x" path="res://Assets/Menu/play.png" id="2_oxqdr"]
[ext_resource type="Texture2D" uid="uid://db0k301xmtvw" path="res://Assets/download.jpeg" id="2_x5ngm"]
[ext_resource type="Texture2D" uid="uid://e42dlpnbvi7e" path="res://Assets/Menu/exit.png" id="3_b42uw"]
[ext_resource type="FontFile" uid="uid://br1fqps1ru6cb" path="res://Assets/Fontes/Lemon Fruit.otf" id="4_vey2h"]
[ext_resource type="Texture2D" uid="uid://dpi50yv353h6c" path="res://Assets/Menu/BotaoSim-.png" id="6_i4x8f"]
[ext_resource type="PackedScene" uid="uid://c5lj1li5t05xr" path="res://player.tscn" id="8_kox2p"]
[ext_resource type="Script" path="res://playerLobby.gd" id="9_7dexc"]
[ext_resource type="SpriteFrames" uid="uid://bs7lq7i0ndh2i" path="res://Assets/Personagens/playerAnim.tres" id="10_58l7k"]
[ext_resource type="AudioStream" uid="uid://bb36h6mo8d71y" path="res://soms/Come Along With Me (Island Song) [8 Bit Tribute to Adventure Time & Ashley Eriksson].mp3" id="11_0s00g"]

[node name="title_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4f27t")

[node name="Download" type="Sprite2D" parent="."]
modulate = Color(0.249026, 0.266121, 0.421566, 1)
position = Vector2(96, 161)
scale = Vector2(0.362692, 0.362692)
texture = ExtResource("2_x5ngm")

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="game-title" type="TextureRect" parent="Main"]
layout_mode = 2
texture = ExtResource("1_g48yt")
expand_mode = 5

[node name="buttons" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="start_button" type="TouchScreenButton" parent="Main/buttons"]
position = Vector2(50, 32)
scale = Vector2(0.147077, 0.147077)
texture_normal = ExtResource("2_oxqdr")

[node name="quit_button" type="TouchScreenButton" parent="Main/buttons"]
position = Vector2(55, 83)
scale = Vector2(0.123761, 0.123761)
texture_normal = ExtResource("3_b42uw")

[node name="SelecinarFinn" type="TouchScreenButton" parent="Main/buttons"]
position = Vector2(72, 190)
scale = Vector2(0.0616737, 0.0616737)
texture_normal = ExtResource("6_i4x8f")

[node name="highscore" type="Label" parent="Main"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.669642, 0.179945, 0.227013, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vey2h")
theme_override_font_sizes/font_size = 16
text = "HIGHSCORE:"

[node name="Player2" parent="." instance=ExtResource("8_kox2p")]
position = Vector2(88, 226)
scale = Vector2(1.4558, 1.4558)
script = ExtResource("9_7dexc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player2"]
sprite_frames = ExtResource("10_58l7k")
animation = &"ParadoBMO"

[node name="MusicaFundo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_0s00g")
autoplay = true

[connection signal="pressed" from="Main/buttons/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Main/buttons/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Main/buttons/SelecinarFinn" to="." method="_on_selecinar_finn_pressed"]
